--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -37,11 +37,12 @@ body {
   background-color: transparent;
 }
 
-h1 {
+.container h1 {
   font-size: 24px;
   margin-bottom: 20px;
   text-align: center;
-  color: #D4AF37; /* Gold color for Game of Thrones theme */
+  color: #D4AF37;
+  margin-top: 80px; /* Gold color for Game of Thrones theme */
 }
 
 .username-input, .password-input {
@@ -128,4 +129,20 @@ h1 {
   .buttons {
     gap: 8px;
   }
+}
+.selected-avatar-top {
+  position: absolute;
+  top: 10px;  /* Adjust to control the vertical distance from the top */
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.avatar-small-top {
+  width: 100px;  /* Size of the small avatar */
+  height: 100px;
+  border-radius: 50%;
+  border: 2px solid #fff;  /* Optional: Add a border around the avatar */
+  margin-bottom: 50px;
 }
