--- a/src/components/Round.css
+++ b/src/components/Round.css
@@ -22,7 +22,7 @@
 .round1-timer {
   font-size: 32px;
   margin-bottom: 20px;
-  margin-top: 50px;
+  margin-top: 100px;
 }
 
 .visible-input {
@@ -71,7 +71,7 @@
   gap: 2px; /* Add space between the images */
   width: 420px; /* Adjust width based on image size and gap */
   height: 220px; /* Adjust height based on image size and gap */
-  margin-top: 20px;
+  margin-top: 50px;
   margin-right: 90px;
 }
 
@@ -143,6 +143,34 @@
   text-decoration: none;
   border-radius: 5px;
   cursor: pointer;
+}
+.top-button1{
+  background: url("/public/treasure.png");
+   background-size: cover;
+   background-position:center ;
+   width: 50px;
+   height: 50px;
+   border: none;
+   cursor: pointer;
+}
+.top-button2{
+   background: url("/public/leaderboard.jpg");
+   background-size: cover;
+   background-position:center ;
+   width: 50px;
+   height: 50px;
+   border: none;
+   cursor: pointer;
+}
+.top-buttons {
+  position: absolute;
+  top: 50px;
+  right:20px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: end;
+  gap: 10px;
 }
 
 @media (max-width: 768px) {
