--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -146,3 +146,18 @@ body {
   border: 2px solid #fff;  /* Optional: Add a border around the avatar */
   margin-bottom: 50px;
 }
+.show-password-button{
+  border: 1px solid #555; /* Dark border */
+  background-color: #D4AF37; /* Gold base color */
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), /* Highlight */
+              inset 0 -1px 3px rgba(0, 0, 0, 0.3), /* Depth */
+              0 3px 6px rgba(0, 0, 0, 0.5), /* Outer shadow for a worn look */
+              1px 1px 4px rgba(0, 0, 0, 0.6); /* Rough shadow edges */
+  cursor: pointer;
+  transition: background-color 0.3s, box-shadow 0.3s;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  gap: 10px;
+}
