--- a/src/components/TimerPage.css
+++ b/src/components/TimerPage.css
@@ -7,7 +7,7 @@
     align-items:  center ;
     background-color: #111; 
     color: #fff;
-    background: url("/public/time.jpg");
+    background: url("/public/maintimer.jpg");
 
   }
   
