--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -43,6 +43,7 @@ body {
   text-align: center;
   color: #D4AF37;
   margin-top: 80px; /* Gold color for Game of Thrones theme */
+  font-family: 'Cinzel',serif;
 }
 
 .username-input, .password-input {
@@ -67,16 +68,17 @@ body {
   color: rgba(255, 255, 255, 0.5); /* Lighter color for the placeholder text */
 }
 
-.avatar-button, .login-button {
+.avatar-button, .login-button, .show-password-button{
   width: 100%;
   max-width: 200px;
   padding: 12px; /* Adjust padding */
   margin: 10px 0;
   font-size: 18px; /* Increase font size */
-  border: none;
-  border-radius: 5px;
+  /* border: none;
+  border-radius: 5px; */
   font-family: 'Cinzel', serif; /* Apply font family to buttons */
-  color: white; /* Button text color */
+  color: rgb(255, 251, 251); /* Button text color */
+  background-color: #C4A535;
 }
 
 .avatar-button {
@@ -145,19 +147,4 @@ body {
   border-radius: 50%;
   border: 2px solid #fff;  /* Optional: Add a border around the avatar */
   margin-bottom: 50px;
-}
-.show-password-button{
-  border: 1px solid #555; /* Dark border */
-  background-color: #D4AF37; /* Gold base color */
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), /* Highlight */
-              inset 0 -1px 3px rgba(0, 0, 0, 0.3), /* Depth */
-              0 3px 6px rgba(0, 0, 0, 0.5), /* Outer shadow for a worn look */
-              1px 1px 4px rgba(0, 0, 0, 0.6); /* Rough shadow edges */
-  cursor: pointer;
-  transition: background-color 0.3s, box-shadow 0.3s;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  align-items: center;
-  gap: 10px;
 }
