--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -1,4 +1,3 @@
-
 /* LoginPage.css */
 body {
   font-family: 'Cinzel', serif; /* Set global font family */
@@ -35,6 +34,8 @@ body {
   max-width: 350px;
   padding: 20px;
   background-color: transparent;
+  width: 80%;
+  max-width: 300px;
 }
 
 .container h1 {
@@ -45,11 +46,11 @@ body {
   margin-top: 80px; /* Gold color for Game of Thrones theme */
 }
 
+/* Set consistent styles for input fields */
 .username-input, .password-input {
-  width: 100%;
-  max-width: 250px;
+  width: 100%;  /* Full width */
   padding: 12px; /* Adjust padding */
-  margin: 10px 0;
+  margin: 10px 0; 
   font-size: 18px; /* Increase font size */
   border: none;
   border-radius: 5px;
@@ -67,9 +68,9 @@ body {
   color: rgba(255, 255, 255, 0.5); /* Lighter color for the placeholder text */
 }
 
-.avatar-button, .login-button {
-  width: 100%;
-  max-width: 200px;
+/* Ensure buttons are of the same size */
+.avatar-button, .login-button, .show-password-button {
+  width: 100%;  /* Full width */
   padding: 12px; /* Adjust padding */
   margin: 10px 0;
   font-size: 18px; /* Increase font size */
@@ -77,11 +78,11 @@ body {
   border-radius: 5px;
   font-family: 'Cinzel', serif; /* Apply font family to buttons */
   color: white; /* Button text color */
+  cursor: pointer; /* Pointer cursor on hover */
 }
 
 .avatar-button {
   background-color: #333;
-  cursor: pointer;
   transition: background-color 0.3s;
 }
 
@@ -96,7 +97,6 @@ body {
               inset 0 -1px 3px rgba(0, 0, 0, 0.3), /* Depth */
               0 3px 6px rgba(0, 0, 0, 0.5), /* Outer shadow for a worn look */
               1px 1px 4px rgba(0, 0, 0, 0.6); /* Rough shadow edges */
-  cursor: pointer;
   transition: background-color 0.3s, box-shadow 0.3s;
 }
 
@@ -116,6 +116,24 @@ body {
   gap: 10px;
 }
 
+.back-link {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.back-image {
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  transition: transform 0.3s;
+}
+
+.back-image:hover {
+  transform: scale(1.1); /* Slightly enlarges the image on hover */
+}
+
+
 @media (max-width: 600px) {
   h1 {
     font-size: 20px;
@@ -130,6 +148,7 @@ body {
     gap: 8px;
   }
 }
+
 .selected-avatar-top {
   position: absolute;
   top: 10px;  /* Adjust to control the vertical distance from the top */
@@ -139,6 +158,7 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .avatar-small-top {
   width: 100px;  /* Size of the small avatar */
   height: 100px;
@@ -146,8 +166,8 @@ body {
   border: 2px solid #fff;  /* Optional: Add a border around the avatar */
   margin-bottom: 50px;
 }
-.show-password-button{
-  border: 1px solid #555; /* Dark border */
+
+.show-password-button {
   background-color: #D4AF37; /* Gold base color */
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), /* Highlight */
               inset 0 -1px 3px rgba(0, 0, 0, 0.3), /* Depth */
@@ -155,9 +175,9 @@ body {
               1px 1px 4px rgba(0, 0, 0, 0.6); /* Rough shadow edges */
   cursor: pointer;
   transition: background-color 0.3s, box-shadow 0.3s;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  align-items: center;
-  gap: 10px;
+  width: 70%; /* Reduce width */
+  margin: 10px auto; /* Center horizontally */
+  display: block; /* Ensure it's treated as a block-level element for centering */
+  text-align: center; /* Center text inside the button */
 }
+
