--- a/src/components/TimerPage.css
+++ b/src/components/TimerPage.css
@@ -1,15 +1,23 @@
 .timer-page {
-    position: relative;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items:  center ;
-    background-color: #111; 
-    color: #fff;
-    background: url("/public/swordbk.jpg");
+  position: relative;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #111;
+  color: #fff;
+  background-image: url("/public/swordbk.jpg");
+  background-size: cover; /* This makes the background image responsive */
+  background-position: center; /* This centers the background image */
+  background-repeat: no-repeat; /* Ensures the image does not repeat */
+}
 
+@media (max-width: 768px) {
+  .timer-page {
+      background-size: contain; /* Adjust the size on smaller screens */
   }
+}
   
   .top-buttons {
     position: absolute;
@@ -72,10 +80,17 @@ h1{
     font-size:20px;
 }
 .Font{
-    background-image:linear-gradient(to right,rgb(43, 102, 212) ,rgb(237, 230, 37));
+    background-image:linear-gradient(to right,yellow ,Gold);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    text-shadow: 1px 1px black;
 } 
+.Font1{
+  background-image:linear-gradient(to right,yellow ,Gold);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 0.3px 0.3px black;
+}
 .game{
   width: 100%;
   max-width: 200px;
